1.0
---

- Applied Jan Limpens' patch adding support for inline attachments


Nov 5th, 2006
-------------

- Applied sradack's patch.
- Refactored implementation to have just one project
- Removed EmailSender2, DotNet2Sender, MockSender, MockSender2, SmtpEmailSender and Tests


Oct 19, 2006
------------

- Fixed a bug in the System.Net.Mail (.NET 2.0) version of the SmtpSender, regarding empty CC and BCC fields.
- Also added some new configurable functionality for .NET 2.0:
  Ability to send emails asyncronously (AsyncSend property);
  Configurable SMTP port (Port property);
  Configurable timeout for syncronous send (Timeout property);

6/6/2006
- Applied Ernst Naezer patch fixing problem when cc / bcc fields were null

2/2/2006

- Added .Net 2.0 Support for the original EmailSender
- Added a new .Net 2.0 specific EmailSender interface.
- - .Net 2.0 does not have a Fields Property
- Added a MockSender for the EmailSender2 component
- EmailSender2 has an optional parameter for the config file: Port which takes an integer.


Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file

10.22.2005 - Added Authentication Features
- Added a Fields property that maps to the MailMessage Fields property
- Added public void AddAuthentication(string username, string password)