@@ -1,0 +1,27 @@
+using System;
+using System.Reflection;
+using System.Runtime.CompilerServices;
+using System.Runtime.InteropServices;
+
+//------------------------------------------------------------------------------
+// <auto-generated>
+//     This code was generated by a tool.
+//     Runtime Version:2.0.50727.3053
+//
+//     Changes to this file may cause incorrect behavior and will be lost if
+//     the code is regenerated.
+// </auto-generated>
+//------------------------------------------------------------------------------
+
+[assembly: CLSCompliantAttribute(true)]
+[assembly: ComVisibleAttribute(false)]
+[assembly: AssemblyTitleAttribute("Castle.Components.Common.EmailSender.Tests for Microsoft .NET Framework 3.5")]
+[assembly: AssemblyDescriptionAttribute("The Unit Tests for Castle.Components.Common.EmailSender.Tests")]
+[assembly: AssemblyCompanyAttribute("Castle Project")]
+[assembly: AssemblyProductAttribute("Castle.Components.Common.EmailSender.Tests")]
+[assembly: AssemblyCopyrightAttribute("Castle Project, original author or authors")]
+[assembly: AssemblyVersionAttribute("1.1.0.0")]
+[assembly: AssemblyInformationalVersionAttribute("1.1.0.0")]
+[assembly: AssemblyFileVersionAttribute("1.1.0.0")]
+[assembly: AssemblyDelaySignAttribute(false)]
+
