@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SmtpSenderCreateMessageTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -50,6 +50,9 @@
       <Project>{CFF1D57F-9FEB-4941-B8FE-8E28F4A8AAC7}</Project>
       <Name>Castle.Components.Common.EmailSender-vs2008</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
